Fix mojom::ResourceUsageReporter exposure via content child capabilities

Adds the interface to the browser capability for content_gpu in
Chrome's overlay.

Moves the interface from content_renderer_manifest.json to Chrome's
content_renderer overlay where it belongs.

Adds a Chrome overlay for content_plugin and adds the interface
there as well.

BUG=660903
R=ben@chromium.org,tsepez@chromium.org

Review-Url: https://codereview.chromium.org/2464693004
Cr-Commit-Position: refs/heads/master@{#428804}

Former-commit-id: 67c1db0e0886747ccb550b0df67394cfa5d5f312